--- a/templates/Files/index.html
+++ b/templates/Files/index.html
@@ -5,16 +5,16 @@
     {% if data %}
         {% if type == 'group' %}
             <div class="container">
-                {% for image in data.image_files.all %}
+                {% for image in data.image_files %}
                 <div class="item">
-                    <img src="{{ image.file }}" alt="{{ image.name }}">
+                    <img src="{{ image.file }}" alt="This image might not be supported by your browser">
                     <div class="feature">
                         <p>{{ image.name }}</p>
                         <a href="{{ image.file }}" title="download" class="btn">Download</a>
                     </div>
                 </div>
                 {% endfor %}
-                {% for video in data.video_files.all %}
+                {% for video in data.video_files %}
                 <div class="item">
                     <video controls>
                         <source src="{{ video.file }}" type="video/mp4">
