--- a/templates/Email/notify.html
+++ b/templates/Email/notify.html
@@ -12,7 +12,11 @@ align-items: center;
 justify-content: center;
 gap: 10px;">
     <h1 style="color: #4338ca">Hello {{ name }}</h1>
-    <h3>A new file is being uploaded by {{ by }}</h3>
+    <h3>{{ text }}</h3>
+    <p>{{ psw }}</p>
+    {% if psw %}
+        <p style="color: red;""><i>***Don't share your password with anyone or change it as soon as possible***</i></p>
+    {% endif %}
     <a href="https://athena.1stzoom.com/login" style="border: none;
     background-color: #4338ca;
     color: white;
@@ -23,6 +27,6 @@ gap: 10px;">
     border-radius: 5px;
     cursor: pointer;
     margin: 10px auto;
-    text-decoration: none;">Got to Site</a>
+    text-decoration: none;">Go to Site</a>
 </body>
 </html>
